# pretrainingTSPFN

./: .gitignore  .gitmodules  =4.43.0  README.md  TSPFN.drawio  checking_missing_score.py  cleaning.py  data_description.py  download_tabpfn_model.py  labram_script.sh  pyproject.toml  quick_evaluate.py  score_scrapping.py  tuab-process-error-files.txt
config/: default.yaml
config/callbacks/: model_checkpoint.yaml
config/data/: default.yaml  evaluating-abide.yaml  evaluating-atrialfibri.yaml  evaluating-blink.yaml  evaluating-cpsc.yaml  evaluating-cpsc4chans.yaml  evaluating-ecg5000.yaml  evaluating-ecgFiveDays.yaml  evaluating-eicu.yaml  evaluating-eicucrd.yaml  evaluating-eos.yaml  evaluating-esr.yaml  evaluating-orchid.yaml  finetuning-atrialfibri.yaml  finetuning-cpsc.yaml  finetuning-ecg5000.yaml  finetuning-eicucrd.yaml  finetuning-eos.yaml  finetuning-esr.yaml  finetuning-tuev.yaml  pretraining-cauker-univariate.yaml  pretraining-cauker.yaml  pretraining-csv.yaml  pretraining-data-dev.yaml  pretraining-data-mantis.yaml  pretraining-data.yaml
config/task/: default.yaml
config/trainer/: default.yaml
data/: atrialfibri_preprocessing.py  benchmark_data_module.py  benchmark_datasets.py  blink_preprocessing.py  cpsc_preprocessing.py  data_module.py  data_module_mantis.py  datamodule.py  eICU_preprocessing.py  eos_preprocessing.py  evaluation_datasets.py  hirid_preprocessing.py  orchid_preprocessing.py  pretraining_datasets.py  pretraining_mantis_ds.py  ptb_preprocessing.py  tuab_preprocessing.py  tuev_cleaning.py  tuev_preprocessing.py  ucr_builder.py
data/utils/: config.py  decorators.py  processing_csv.py  sampler.py  saving.py  spliter.py
data/utils_ptb/: data_utils.py  plot_utils.py  segment_utils.py
diagrams/: CubePFN.drawio  Diagramme sans nom.drawio  LabramExtractor.drawio  StratifySampler.drawio  TS-Collapse.drawio  TSPFN-batched-pretraining.drawio  TSPFN-multivariate-space.drawio  TSPFN-subspace.drawio  TSPFN_MICCAI.drawio  TabPFN-drawio.drawio  TabPFNStratified.drawio  convolTS.drawio
scripts/: ablations.sh  baselines.sh  benchmark.sh  dataprocessing.sh  evaluation.sh  finetune_script.sh  generateTS.sh  mantis_pretrain.sh  newbenchmark.sh  pretrain_script.sh
tspfn/: augmentation.py  losses.py  runner.py  system.py  tspfn_module.py  utils.py
tspfn/architecture/: DEBUGtspfn_encoder.py  contrastive_heads.py  convolpfn3_encoder.py  cubepfn2p5_encoder.py  cubepfn3_encoder.py  loc_head.py  minirocket.py  pe_utils.py  prediction_head.py  prediction_heads.py  tcn.py  (+5 more)
(+73 files in other folders)
