[tool.poetry]
name = "tspfn"
version = "0.1.0"
description = "Pretraining Time-Series PFN models with incontext learning tasks and real world datasets"
authors = ["Jérémie Stym-Popper <stympopper@isir.upmc.fr>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Jeremstym/pretrainingTSPFN"
classifiers=[
    "Environment :: Console",
    "Natural Language :: English",
    # Pick your license as you wish
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "~3.10.6"
torch = "2.9.1"
torchvision = "0.24.1"
pytorch-lightning = "~2.0.0"
hydra-core = "~1.3.0"
hydra-joblib-launcher = "*"
holoviews = { version = "*", extras = ["recommended"] }
numba = "^0.59.0"   # as to be manually pinned to avoid resolver picking a too old version w/o pre-build llvmlite dep
numpy = "^1.22"
 pandas = "*"
torchmetrics = "*"
PyYAML = "*"
matplotlib = "*"
pacmap = "*"
comet-ml = "*"
tabpfn = "^6.3.0"
shap = "^0.48.0"
seaborn = "0.13.0"
torchinfo = "^1.8.0"
lightning = "^2.6.0"
pyedflib = "^0.1.42"
librosa = "^0.11.0"
mne = "^1.11.0"
transformers = "^4.57.5"
faiss-gpu-cu11 = "1.9.0.0"
timm = "0.4.12"
einops = "^0.8.1"
# scipy = "^1.11"
h5py = "^3.15.1"
tensorboardx = "^2.6.4"
xlrd = "^2.0.2"
aeon = "^1.3.0"
xgboost = "^3.1.3"
pytorch-nemo = "0.0.8"
wfdb = "^4.3.0"
sktime = "^0.40.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "==5.12.0"
black = "==23.3.0"
flake8 = "==6.0.0"
flake8-docstrings = "==1.7.0"
ipykernel = "^6.29.5"
mypy = "^1.16.1"
scipy-stubs = "^1.15.3.0"
pandas-stubs = "^2.2.3.250527"
types-pyyaml = "^6.0.12.20250516"
types-tqdm = "^4.67.0.20250516"
types-seaborn = "^0.13.2.20250728"

[tool.poetry.scripts]
tspfn-pretrain = "tspfn.runner:main"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.black]
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["tspfn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
